--- a/.screenrc
+++ b/.screenrc
@@ -182,3 +182,4 @@ hardstatus string "%{.bW}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a"
 #Logging stuff
 deflog on
 logfile /tmp/screenlog.%n
+logtstamp on
