added soem alias for gitconfig and setup good values for shortcut keys with a VM

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,7 +13,9 @@
 	ci = commit
 	co = checkout
 	d = diff
+	ds = diff --stat
 	dc = diff --cached
+	dcs = diff --cached --stat
 	fp = format-patch
 	g = !git gui &
 	gr = log --graph
