--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,11 @@
 set -g prefix C-a
 #unbind C-b
+
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+bind | split-window -h
+
+bind-key C-a last-window
+
+set-window-option -g window-status-current-bg yellow
+set-option -g mouse-select-pane on
