--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,23 @@ set -g prefix C-a
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 bind | split-window -h
+bind - split-window -v
 
 bind-key C-a last-window
 
 set-window-option -g window-status-current-bg yellow
 set-option -g mouse-select-pane on
+set-option -g set-titles on
+setw -g monitor-activity on
+set -g visual-activity on
+
+
+#tmux list-keys
+#tmux list-commands
+#Ca$ (rename session)
+
+
+#Session help
+#tmux list-sessions (From command line 
+#tmux new -s session-name
+#tmux attach -t session-name
