Added pane selection via vi keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,19 @@ set-option -g set-titles on
 setw -g monitor-activity on
 set -g visual-activity on
 
+#Pane Selection like VI
+unbind-key j
+bind-key j select-pane -D 
+
+unbind-key k
+bind-key k select-pane -U
+
+unbind-key h
+bind-key h select-pane -L
+
+unbind-key l
+bind-key l select-pane -R
+
 
 #tmux list-keys
 #tmux list-commands
