--- a/.ssh/config
+++ b/.ssh/config
@@ -16,3 +16,9 @@ Host pp2
 Host kvm
   HostName kvmhypervisor
   User root
+Host atom
+	HostName atom
+	User root
+Host pionpp
+  HostName 172.20.175.157
+	User root
