--- a/.ssh/config
+++ b/.ssh/config
@@ -19,6 +19,9 @@ Host kvm
 Host atom
 	HostName atom
 	User root
+Host knuckles
+  HostName 172.20.154.140
+	User root
 Host pionpp
   HostName 172.20.175.157
 	User root
