Add CaC to send clear to all telnet sessions or terms

--- a/.screenrc
+++ b/.screenrc
@@ -123,6 +123,8 @@ bind 'I' login on
 bind 'O' login off
 bind '}' history
 
+bind 'C' at "#" stuff "clear\r"
+
 # This makes screen change backspaces to '^H' (as
 # it should). There should be a fix in the code
 # for the way termcap inheritance works, but I
