--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,9 @@
 [user]
-	name = vaterp
-	email = brian.snyder@gmail.com
+	name = Brian Snyder
+	email = bsnyder@idirect.net
 [core]
 	editor = vim
+	pager  = less -eiFRX	
 [merge]
 	tool = vimdiff
 
@@ -17,11 +18,12 @@
 	ds = diff --stat
 	dc = diff --cached
 	dcs = diff --cached --stat
+	dno = diff --name-only
 	fp = format-patch
 	lg = log --graph
 	lgo = log --graph --pretty=oneline --abbrev-commit
 	lf  =  log --graph --pretty=format:'%h %an -%d %s (%cr)' --abbrev-commit --date=relative
-	#lf  =  log --graph --pretty=format:'%Cred%h%Creset %C(cyan)%an%Creset -%C(blue)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+  hist = log --pretty=format:'%h %ad | %s%d [%an]' --date=short	
 	k = !gitk &
 	ka = !gitk --all &
 	lc = log ORIG_HEAD.. --stat --no-merges
