--- a/.gitconfig
+++ b/.gitconfig
@@ -41,3 +41,4 @@
 	stm = status --untracked=no
 	stfu = status --untracked=no
 	pullsrb = !git stash save && git pull --rebase && git stash pop && echo 'Success!'
+	who = shortlog -s
