--- a/.gitconfig
+++ b/.gitconfig
@@ -21,7 +21,7 @@
 	dcs = diff --cached --stat
 	dno = diff --name-only
 	fp = format-patch
-	lg = log --graph
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	lgo = log --graph --pretty=oneline --abbrev-commit
 	lf  =  log --graph --pretty=format:'%h %an -%d %s (%cr)' --abbrev-commit --date=relative
   hist = log --pretty=format:'%h %ad | %s%d [%an]' --date=short	
