--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,7 @@
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	lgo = log --graph --pretty=oneline --abbrev-commit
 	lf  =  log --graph --pretty=format:'%h %an -%d %s (%cr)' --abbrev-commit --date=relative
-  hist = log --pretty=format:'%h %ad | %s%d [%an]' --date=short	
+  hist = log --pretty=format:'%h %ad | %s %C(green)%d %C(bold blue)[%an]%Creset' --date=short	
 	k = !gitk &
 	ka = !gitk --all &
 	lc = log ORIG_HEAD.. --stat --no-merges
