Set color.ui auto

--- a/.gitconfig
+++ b/.gitconfig
@@ -40,3 +40,5 @@
 	stfu = status --untracked=no
 	pullsrb = !git stash save && git pull --rebase && git stash pop && echo 'Success!'
 	who = shortlog -s
+[color]
+	ui = auto
