--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,14 @@
 set -g prefix C-a
-#unbind C-b
+unbind C-b
+
+unbind-key >
+bind-key > pipe-pane -o "exec cat >>$HOME/`date`.tmux.log" 
+unbind-key <
+bind-key < pipe-pane  
+
+#bind-key h pipe-pane -o "exec cat >>$HOME/#W-tmux.log"
+#bind-key h pipe-pane -o "exec cat >>$HOME/#W-tmux.log" '\;' display-message 'Started logging to $HOME/#W-tmux.log'
+#bind-key H pipe-pane '\;' display-message 'Ended logging'
 
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
@@ -12,7 +21,26 @@ set-window-option -g window-status-current-bg yellow
 set-option -g mouse-select-pane on
 set-option -g set-titles on
 setw -g monitor-activity on
+setw -g mode-keys vi
 set -g visual-activity on
+
+#Copy and Paste
+
+#bind-key [ copy-mode
+#bind-key ] paste-buffer -s \015
+setw -g mode-mouse on
+set-window-option -g mode-mouse on
+unbind-key b
+unbind-key p
+unbind-key x
+bind-key b list-buffers
+bind-key p choose-buffer
+bind-key x delete-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 
 #Pane Selection like VI
 unbind-key j
