--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,14 +62,14 @@ set -g visual-activity on
 setw -g mode-mouse on
 set-window-option -g mode-mouse on
 unbind-key b
-unbind-key p
+unbind-key y
 unbind-key x
 bind-key b list-buffers
-bind-key p choose-buffer
+bind-key y choose-buffer
 bind-key x delete-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'r' rectangle-toggle
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
