--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind-key C-a last-window
  
 # # default statusbar colors
 set-option -g status-fg white
-set-option -g status-bg black
+set-option -g status-bg blue
 set-option -g status-attr default
 
 # # default window title colors
