Few small tweaks, hook up history search fwd back to up/down arrow

--- a/.inputrc
+++ b/.inputrc
@@ -2,8 +2,13 @@ $include /etc/inputrc
 
 TAB: menu-complete
 set show-all-if-ambiguous on
+set show-all-if-unmodified on
 set colored-stats on
 set match-hidden-files off
+#set completion-ignore-case on
+
+"\C-[[A": history-search-backward
+"\C-[[B": history-search-forward
 
 $if Bash
 	 Space: magic-space
