Updated tmuxrc file for newer version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,6 @@ bind E setw synchronize-panes off
 bind | split-window -h
 bind - split-window -v
 
-bind-key C-a last-window
 #############
 
 # statusbar --------------------------------------------------------------
@@ -35,7 +34,7 @@ set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg yellow
 set-window-option -g window-status-current-attr bright
 
-set-window-option -g window-status-content-fg red
+#set-window-option -g window-status-content-fg red
 #set-window-option -g window-status-content-bg white
 
 # # command/message line colors
@@ -49,7 +48,7 @@ set-option -g message-attr bright
 # Reload source file
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
-set-option -g mouse-select-pane on
+#set-option -g mouse-select-pane on
 set-option -g set-titles on
 setw -g monitor-activity on
 setw -g mode-keys vi
@@ -57,34 +56,21 @@ set -g visual-activity on
 
 #Copy and Paste
 
-#bind-key [ copy-mode
-#bind-key ] paste-buffer -s \015
-setw -g mode-mouse on
-set-window-option -g mode-mouse on
+bind v paste-buffer
+
 unbind-key b
 unbind-key y
 unbind-key x
 bind-key b list-buffers
 bind-key y choose-buffer
 bind-key x delete-buffer
+
+
+
 #bind-key -t vi-copy 'v' begin-selection
 #bind-key -t vi-copy 'y' copy-selection
 #bind-key -t vi-copy 'r' rectangle-toggle
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-
-#Pane Selection like VI
-unbind-key j
-bind-key j select-pane -D 
-
-unbind-key k
-bind-key k select-pane -U
-
-unbind-key h
-bind-key h select-pane -L
-
-unbind-key l
-bind-key l select-pane -R
 
 
 #tmux list-keys
@@ -96,3 +82,19 @@ bind-key l select-pane -R
 #tmux list-sessions (From command line 
 #tmux new -s session-name
 #tmux attach -t session-name
+
+
+#TMUX2.1 only
+set -g mouse on
+
+#Act like VIM
+set-window-option -g mode-keys vi
+bind-key j select-pane -D 
+bind-key k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+
+bind-key C-a last-window
+set -g history-limit 500000
+
