Tmux conf updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,12 +6,6 @@ bind-key > pipe-pane -o "exec cat >>$HOME/`date`.tmux.log"
 unbind-key <
 bind-key < pipe-pane  
 
-#bind-key h pipe-pane -o "exec cat >>$HOME/#W-tmux.log"
-#bind-key h pipe-pane -o "exec cat >>$HOME/#W-tmux.log" '\;' display-message 'Started logging to $HOME/#W-tmux.log'
-#bind-key H pipe-pane '\;' display-message 'Ended logging'
-
-bind e setw synchronize-panes on
-bind E setw synchronize-panes off
 bind | split-window -h
 bind - split-window -v
 
@@ -48,7 +42,6 @@ set-option -g message-attr bright
 # Reload source file
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
-#set-option -g mouse-select-pane on
 set-option -g set-titles on
 setw -g monitor-activity on
 setw -g mode-keys vi
@@ -98,3 +91,5 @@ bind-key l select-pane -R
 bind-key C-a last-window
 set -g history-limit 500000
 
+bind-key a send-prefix
+bind-key S setw synchronize-panes
