Change color to something readable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set-option -g status-bg blue
 set-option -g status-attr default
 
 # # default window title colors
-set-window-option -g window-status-fg white
+set-window-option -g window-status-fg black
 set-window-option -g window-status-bg default
 set-window-option -g window-status-attr dim
 
