Toggle mouse mode on/off for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,6 +81,7 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 #TMUX2.1 only
 set -g mouse on
+bind-key M  set -g mouse
 
 #Act like VIM
 set-window-option -g mode-keys vi
