Errors with some tmux settings, just commenting out for now

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,29 +14,30 @@ unbind %
 #############
 
 # statusbar --------------------------------------------------------------
+# These settings dont work, im not sure why on CT anyway which is tmux 3.3a
  
 # # default statusbar colors
 set-option -g status-fg white
 set-option -g status-bg blue
-set-option -g status-attr default
+#set-option -g status-attr default
 
 # # default window title colors
-set-window-option -g window-status-fg black
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+#set-window-option -g window-status-fg black
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
 # # active window title colors
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-attr bright
+#set-window-option -g window-status-current-fg black
+#set-window-option -g window-status-current-bg yellow
+#set-window-option -g window-status-current-attr bright
 
 #set-window-option -g window-status-content-fg red
 #set-window-option -g window-status-content-bg white
 
 # # command/message line colors
-set-option -g message-fg white
-set-option -g message-bg green
-set-option -g message-attr bright
+#set-option -g message-fg white
+#set-option -g message-bg green
+#set-option -g message-attr bright
 
 #############
 
